2nd update for finished vg

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* CSS BY your name */
+/* CSS BY Nejat Nehan */
 
 /* IMPORTED FONTS*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
